vlib/v/checker/tests/asm_only_unsafe_blocks.vv
asm x64 {
    mov eax, ebx
}